Big changes: removed need for modified versions of Backbone.js and Backbone-Articulation.js (monkey patched inside Backbone.Articulation), upgraded to use Lifecyle.js and JSON-Serialization.js (which provided built-in Dates serialization/deserialization) instead of underscore-awesomer.js, now provides a bundeled version (with Lifecyle.js and JSON-Serialization.js) called backbone-articulation.js and unbundled version called backbone-articulation_core.js.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "keywords"      : ["backbone", "backbone.js", "backbone-articulation",  "backbone-articulation.js"],
   "author"        : "Kevin Malakoff <xmann.intl@gmail.com>",
   "contributors"  : [],
-  "dependencies"  : [],
+  "dependencies"  : ['backbone.js', 'underscore.js', 'json-serialize.js', 'lifecycle.js'],
   "repository"    : {"type": "git", "url": "git://github.com/kmalakoff/backbone-articulation.git"},
   "main"          : "backbone-articulation.js",
-  "version"       : "0.2.0"
+  "version"       : "0.3.0"
 }
