--- a/easy-bake-config.yml
+++ b/easy-bake-config.yml
@@ -20,13 +20,13 @@ tests:
 postinstall:
   copy_latest_underscore:
     command: 'cp'
-    args: ['node_modules/underscore/underscore.js', 'vendor/underscore-latest.js']
+    args: ['underscore', 'vendor/underscore-latest.js']
   copy_latest_backbone:
     command: 'cp'
-    args: ['node_modules/backbone/backbone.js', 'vendor/backbone-latest.js']
+    args: ['backbone', 'vendor/backbone-latest.js']
   copy_latest_json_serialize:
     command: 'cp'
-    args: ['node_modules/json-serialize/json-serialize.js', 'vendor/json-serialize-latest.js']
+    args: ['json-serialize', 'vendor/json-serialize-latest.js']
   copy_latest_lifecycle:
     command: 'cp'
-    args: ['node_modules/lifecycle/lifecycle.js', 'vendor/lifecycle-latest.js']
+    args: ['lifecycle', 'vendor/lifecycle-latest.js']
