--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author"        : {"name": "Kevin Malakoff", "url": "https://github.com/kmalakoff"},
-  "name"          : "backbone-articulation_dev",
+  "name"          : "_backbone-articulation",
   "description"   : "Backbone-Articulation.js enhances Backbone.js model attributes with object serialization and deserialization",
   "keywords"      : ["backbone-articulation", "backbone-articulationjs", "backbone", "backbonejs", "backbone-relational", "backbone-rel"],
 
@@ -17,11 +17,11 @@
     "test": "cake -c -b test"
   },
   "optionalDependencies" : {
-    "underscore": "latest",
-    "backbone": "latest",
-    "backbone-relational": "latest",
-    "json-serialize": "latest",
-    "lifecycle": "latest"
+    "underscore": ">=1.3.3",
+    "backbone": ">=0.9.2",
+    "backbone-relational": ">=0.5.0",
+    "json-serialize": ">=1.1.1",
+    "lifecycle": ">=1.0.1"
   },
 
   "main"          : "backbone-articulation.js",
