--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -12,10 +12,10 @@
   },
 
   "optionalDependencies" : {
-    "underscore": "latest",
-    "backbone": "latest",
-    "json-serialize": "latest",
-    "lifecycle": "latest"
+    "underscore": ">=1.3.3",
+    "backbone": ">=0.9.2",
+    "json-serialize": ">=1.1.1",
+    "lifecycle": ">=1.0.1"
   },
 
   "main"          : "backbone-articulation.js",
