--- a/easy-bake-config.yml
+++ b/easy-bake-config.yml
@@ -2,7 +2,7 @@ library_core:
   join: backbone-articulation.js
   compress: true
   files:
-    - src/**/*.coffee
+    - src/backbone-articulation.coffee
   modes:
     build:
       commands:
@@ -10,6 +10,20 @@ library_core:
         - 'cp backbone-articulation.min.js packages/npm/backbone-articulation.min.js'
         - 'cp backbone-articulation.js packages/nuget/Content/Scripts/backbone-articulation.js'
         - 'cp backbone-articulation.min.js packages/nuget/Content/Scripts/backbone-articulation.min.js'
+
+library_backbone-relational:
+  output: lib
+  join: backbone-articulation-backbone-relational.js
+  compress: true
+  files:
+    - src/backbone-articulation-backbone-relational.coffee
+  modes:
+    build:
+      commands:
+        - 'cp lib/backbone-articulation-backbone-relational.js packages/npm/lib/backbone-articulation-backbone-relational.js'
+        - 'cp lib/backbone-articulation-backbone-relational.min.js packages/npm/lib/backbone-articulation-backbone-relational.min.js'
+        - 'cp lib/backbone-articulation-backbone-relational.js packages/nuget/Content/Scripts/lib/backbone-articulation-backbone-relational.js'
+        - 'cp lib/backbone-articulation-backbone-relational.min.js packages/nuget/Content/Scripts/lib/backbone-articulation-backbone-relational.min.js'
 
 tests:
   output: build
@@ -28,17 +42,19 @@ tests:
           json-serialize: json-serialize
           lifecycle: lifecycle
           backbone-articulation: backbone-articulation.js
+          backbone-articulation-backbone-relational: lib/backbone-articulation-backbone-relational.js
           _publish:
             underscore: _
             backbone: Backbone
 
         test/packaging/build/bundle-legacy.js:
-          underscore: vendor/underscore-1.0.3.js
+          underscore: vendor/underscore-1.1.7.js
           backbone: vendor/backbone-0.5.1.js
-          backbone-relational: backbone-relational
+          backbone-relational: vendor/backbone-relational-0.4.0.js
           json-serialize: json-serialize
           lifecycle: lifecycle
           backbone-articulation: backbone-articulation.js
+          backbone-articulation-backbone-relational: lib/backbone-articulation-backbone-relational.js
           _publish:
             underscore: _
             backbone: Backbone
