--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author"        : {"name": "Kevin Malakoff", "url": "https://github.com/kmalakoff"},
   "name"          : "_backbone-articulation",
-  "description"   : "Backbone-Articulation.js enhances Backbone.js model attributes with object serialization and deserialization",
+  "description"   : "Backbone-Articulation.js enhances Backbone.js model attributes with object serialization and deserialization.",
   "keywords"      : ["backbone-articulation", "backbone-articulationjs", "backbone", "backbonejs", "backbone-relational", "backbone-rel"],
 
   "url"           : "http://kmalakoff.github.com/backbone-articulation/",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "coffee-script": ">=1.3.3",
-    "easy-bake": "0.1.4"
+    "easy-bake": "0.1.5"
   },
   "optionalDependencies": {
     "underscore": ">=1.3.3",
