--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "easy-bake": "0.1.8"
   },
   "optionalDependencies": {
-    "underscore": ">=1.3.3",
-    "backbone": ">=0.9.2",
-    "backbone-relational": ">=0.6.0",
+    "underscore": ">=1.4.4",
+    "backbone": ">=1.0.0",
+    "backbone-relational": ">=0.8.0plus",
     "json-serialize": ">=1.1.2",
-    "lifecycle": ">=1.0.2"
+    "lifecycle": ">=1.0.2",
+    "lodash": ">=1.1.0"
   },
 
   "main"          : "backbone-articulation.js",
